--- a/Actividad1/app/src/main/res/layout/activity_form.xml
+++ b/Actividad1/app/src/main/res/layout/activity_form.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".EjerciciosClase.LinearLayoutActivity">
+    tools:context=".EjerciciosClase.Layouts.LinearLayoutActivity">
     <!--    <LinearLayout-->
     <!--        android:layout_width="match_parent"-->
     <!--        android:layout_height="match_parent"-->
