--- a/Actividad1/app/src/main/res/layout/activity_linear_layout.xml
+++ b/Actividad1/app/src/main/res/layout/activity_linear_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".EjerciciosClase.LinearLayoutActivity">
+    tools:context=".EjerciciosClase.Layouts.LinearLayoutActivity">
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
