--- a/Actividad1/app/src/main/res/values-night/themes.xml
+++ b/Actividad1/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,16 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="ThemePet" parent="Theme.PrimerProyecto">
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/blue</item>
+    </style>
+    <style name="GreenEditText"> 
+        <item name="android:textColor">
+            @color/blue
+        </item>
+        <item name="android:textSize">
+            30sp
+        </item>
+    </style>
 </resources>
